--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="./src/style.scss" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plaster&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plaster&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&family=Yrsa:ital,wght@0,300..700;1,300..700&display=swap"
+      rel="stylesheet"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Hotel</title>
   </head>
   <body>
-    <div id="app"></div>
+    <p class="paragraphe">Paragraphe</p>
+    <div class="btn-hotel">
+      <button>Button</button>
+    </div>
+    <h2>Lorem</h2>
+    <div class="svg-bg">
+      <img src="./assets/imageSvg/Icon3.png" alt="" />
+    </div>
+    <p class="txt-green">Lorem</p>
+
+    <div class="card-container">
+      <div class="card">
+        <figure>
+          <img src="./assets/imagepng/room.png" alt="" />
+        </figure>
+        <p class="title-card">Lorem</p>
+        <p class="txt-card">
+          Vestibulum congue metus quis accumsan euismod. Maecenas sed est
+          mollis, convallis nisi convallis, imperdiet massa.
+        </p>
+        <div class="btn-card">
+          <button>Book for Now</button>
+        </div>
+      </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
