--- a/index.html
+++ b/index.html
@@ -17,31 +17,39 @@
     <title>Hotel</title>
   </head>
   <body>
-    <p class="paragraphe">Paragraphe</p>
-    <div class="btn-hotel">
-      <button>Button</button>
-    </div>
-    <h2>Lorem</h2>
-    <div class="svg-bg">
-      <img src="./assets/imageSvg/Icon3.png" alt="" />
-    </div>
-    <p class="txt-green">Lorem</p>
-
-    <div class="card-container">
-      <div class="card">
-        <figure>
-          <img src="./assets/imagepng/room.png" alt="" />
-        </figure>
-        <p class="title-card">Lorem</p>
-        <p class="txt-card">
-          Vestibulum congue metus quis accumsan euismod. Maecenas sed est
-          mollis, convallis nisi convallis, imperdiet massa.
-        </p>
-        <div class="btn-card">
-          <button>Book for Now</button>
-        </div>
+    <header class="header">
+      <div class="logo">
+        <img src="./assets/imageSvg/Vector (1).png" alt="" />
       </div>
-    </div>
+      <nav class="sidebar">
+        <a href="">Restaurants</a>
+        <a href="">ROOM</a>
+        <a href="">SPA</a>
+        <a href="">Tourism</a>
+        <a href="">Event</a>
+        <a href="">Contact</a>
+      </nav>
+      <div class="btn-header">
+        <button class="btn-border">
+          <svg
+            width="25"
+            height="25"
+            viewBox="0 0 25 25"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M5.24194 4.85181H9.24194L11.2419 9.85181L8.74194 11.3518C9.8129 13.5233 11.5704 15.2808 13.7419 16.3518L15.2419 13.8518L20.2419 15.8518V19.8518C20.2419 20.3822 20.0312 20.8909 19.6562 21.266C19.2811 21.6411 18.7724 21.8518 18.2419 21.8518C14.3412 21.6148 10.6621 19.9583 7.89877 17.195C5.13545 14.4317 3.47899 10.7525 3.24194 6.85181C3.24194 6.32137 3.45266 5.81267 3.82773 5.43759C4.2028 5.06252 4.71151 4.85181 5.24194 4.85181Z"
+              stroke="white"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+          <span>Register</span>
+        </button>
+      </div>
+    </header>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
