--- a/index.html
+++ b/index.html
@@ -50,6 +50,26 @@
         </button>
       </div>
     </header>
+    <main>
+      <section class="hero">
+        <div class="bg-img">
+          <div class="bg-gradient">
+            <img src="./assets/imagepng/hero.png" alt="" />
+            <div class="title">
+              <figure class="star">
+                <img src="./assets/imageSvg/Star.png" alt="" />
+              </figure>
+              <p class="color-txt">Luxury hotel and resort</p>
+              <h2>Luxury hotel and resort</h2>
+              <h1>The Best Luxury Hotel In California</h1>
+              <div class="btn-green btn-center">
+                <button>Book a room</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
