--- a/index.html
+++ b/index.html
@@ -69,6 +69,110 @@
           </div>
         </div>
       </section>
+
+      <section class="about">
+        <div class="number">
+          <svg
+            width="77"
+            height="170"
+            viewBox="0 0 77 170"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <rect
+              x="4.39252"
+              y="0.442871"
+              width="71.7454"
+              height="11.7987"
+              fill="#2F383D"
+            />
+            <rect
+              y="169.557"
+              width="169.114"
+              height="8.78515"
+              transform="rotate(-90 0 169.557)"
+              fill="#2F383D"
+            />
+            <rect
+              x="4.39252"
+              y="157.758"
+              width="71.7454"
+              height="11.7987"
+              fill="#2F383D"
+            />
+          </svg>
+
+          <p class="experience">
+            25 <span class="paragraphe">Years Experience Working</span>
+          </p>
+          <svg
+            width="77"
+            height="170"
+            viewBox="0 0 77 170"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <rect
+              x="72.6075"
+              y="169.557"
+              width="71.7454"
+              height="11.7987"
+              transform="rotate(-180 72.6075 169.557)"
+              fill="#2F383D"
+            />
+            <rect
+              x="77"
+              y="0.442871"
+              width="169.114"
+              height="8.78515"
+              transform="rotate(90 77 0.442871)"
+              fill="#2F383D"
+            />
+            <rect
+              x="72.6075"
+              y="12.2415"
+              width="71.7454"
+              height="11.7987"
+              transform="rotate(-180 72.6075 12.2415)"
+              fill="#2F383D"
+            />
+          </svg>
+        </div>
+
+        <div class="about-us">
+          <p class="txt-green">About us</p>
+          <h2>Luxury Best Hotel In the City California, USA</h2>
+        </div>
+
+        <div class="txt-about">
+          <p class="paragraphe">
+            Lorem ipsum dolor sit amet consectetur. Augue nunc ornare et
+            suspendisse malesuada quam bibendum. Egestas sagittis nisi purus
+            aenean eu nec bibendum platea. Aliquet quisque egestas tristique
+            praesent.Lorem ipsum dolor sit amet consectetur. Augue nunc ornare
+            et suspendisse malesuada quam bibendum
+          </p>
+          <div class="btn-about">
+            <button class="bg-black">
+              Learn More<svg
+                width="25"
+                height="24"
+                viewBox="0 0 25 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M5.76624 12H19.7662M19.7662 12L15.7662 16M19.7662 12L15.7662 8"
+                  stroke="white"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
