--- a/index.html
+++ b/index.html
@@ -173,6 +173,135 @@
           </div>
         </div>
       </section>
+
+      <section class="pub">
+        <div class="wraper-pub">
+          <div class="card-pub">
+            <figure>
+              <img src="./assets/imagepng/Bathroom.png" alt="" />
+            </figure>
+            <div class="title-pub">
+              <p class="color-txt">
+                Luxure<br />
+                Bathroom
+              </p>
+              <div class="btn-pub">
+                <button>
+                  Learn More<svg
+                    width="24"
+                    height="25"
+                    viewBox="0 0 24 25"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-pub">
+            <figure>
+              <img src="./assets/imagepng/Bathroom2.png" alt="" />
+            </figure>
+            <div class="title-pub">
+              <p class="color-txt">
+                Luxure<br />
+                Bathroom
+              </p>
+              <div class="btn-pub">
+                <button>
+                  Learn More<svg
+                    width="24"
+                    height="25"
+                    viewBox="0 0 24 25"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-pub">
+            <figure>
+              <img src="./assets/imagepng/Bathroom3.png" alt="" />
+            </figure>
+            <div class="title-pub">
+              <p class="color-txt">
+                Luxure<br />
+                Bathroom
+              </p>
+              <div class="btn-pub">
+                <button>
+                  Learn More<svg
+                    width="24"
+                    height="25"
+                    viewBox="0 0 24 25"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="card-pub">
+            <figure>
+              <img src="./assets/imagepng/Bathroom4.png" alt="" />
+            </figure>
+            <div class="title-pub">
+              <p class="color-txt">
+                Luxure<br />
+                Bathroom
+              </p>
+              <div class="btn-pub">
+                <button>
+                  <span>Learn More</span
+                  ><svg
+                    width="24"
+                    height="25"
+                    viewBox="0 0 24 25"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
