--- a/index.html
+++ b/index.html
@@ -302,6 +302,57 @@
           </div>
         </div>
       </section>
+
+      <section class="choose">
+        <div class="title-choose">
+          <p class="txt-green">Why choose us</p>
+          <h2>
+            We work to an extremely high standard of <br />
+            Customer Satisfaction
+          </h2>
+        </div>
+
+        <div class="card-wraper-choose">
+          <div class="card-choose">
+            <div class="svg">
+              <figure class="svg-bg">
+                <img src="./assets/imageSvg/Icon3.png" alt="" />
+              </figure>
+            </div>
+            <p class="color-txt">Full Service</p>
+            <p class="paragraphe">
+              Vestibulum congue metus quis accumsan euismod. Maecenas sed est
+              mollis, convallis nisi convallis, imperdiet massa.
+            </p>
+          </div>
+
+          <div class="card-choose">
+            <div class="svg">
+              <figure class="svg-bg">
+                <img src="./assets/imageSvg/Group.png" alt="" />
+              </figure>
+            </div>
+            <p class="color-txt">Security 24/24</p>
+            <p class="paragraphe">
+              Vestibulum congue metus quis accumsan euismod. Maecenas sed est
+              mollis, convallis nisi convallis, imperdiet massa.
+            </p>
+          </div>
+
+          <div class="card-choose">
+            <div class="svg">
+              <figure class="svg-bg">
+                <img src="./assets/imageSvg/wifi.png" alt="" />
+              </figure>
+            </div>
+            <p class="color-txt">Comfort and Convenience</p>
+            <p class="paragraphe">
+              Vestibulum congue metus quis accumsan euismod. Maecenas sed est
+              mollis, convallis nisi convallis, imperdiet massa.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
