--- a/index.html
+++ b/index.html
@@ -353,6 +353,53 @@
           </div>
         </div>
       </section>
+
+      <section class="our">
+        <p class="txt-green">Our room</p>
+        <div class="card-warper-our card-container">
+          <div class="card card-our">
+            <figure>
+              <img src="./assets/imagepng/lit.png" alt="" />
+            </figure>
+            <p class="title-card">Standard room</p>
+            <p class="paragraphe">
+              Vestibulum congue metus quis accumsan euismod. Maecenas sed est
+              mollis, convallis nisi convallis, imperdiet massa.
+            </p>
+            <div class="btn-our">
+              <button class="btn-border">Book for Now</button>
+            </div>
+          </div>
+
+          <div class="card card-our">
+            <figure>
+              <img src="./assets/imagepng/lit-2.png" alt="" />
+            </figure>
+            <p class="title-card">Standard room</p>
+            <p class="paragraphe">
+              Vestibulum congue metus quis accumsan euismod. Maecenas sed est
+              mollis, convallis nisi convallis, imperdiet massa.
+            </p>
+            <div class="btn-our">
+              <button class="btn-border">Book for Now</button>
+            </div>
+          </div>
+
+          <div class="card card-our">
+            <figure>
+              <img src="./assets/imagepng/lit-3.png" alt="" />
+            </figure>
+            <p class="title-card">Standard room</p>
+            <p class="paragraphe">
+              Vestibulum congue metus quis accumsan euismod. Maecenas sed est
+              mollis, convallis nisi convallis, imperdiet massa.
+            </p>
+            <div class="btn-our">
+              <button class="btn-border">Book for Now</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
