--- a/index.html
+++ b/index.html
@@ -400,6 +400,31 @@
           </div>
         </div>
       </section>
+
+      <section class="banner bg-black">
+        <div class="img-banner">
+          <figure>
+            <img class="translate" src="./assets/imagepng/banner.png" alt="" />
+            <img src="./assets/imagepng/banner-2.png" alt="" />
+          </figure>
+        </div>
+        <div class="txt-banner">
+          <p class="title-banner">
+            THe luxury Experience<br />
+            You’ll Remember
+          </p>
+          <p class="paragraphe">
+            Lorem ipsum dolor sit amet consectetur. Augue nunc ornare et
+            suspendisse malesuada quam bibendum. Egestas sagittis nisi purus
+            aenean eu nec bibendum platea. Aliquet quisque egestas tristique
+            praesent.Lorem ipsum dolor sit amet consectetur. Augue nunc ornare
+            et suspendisse malesuada quam bibendum
+          </p>
+          <div class="btn-green">
+            <button>Learn More</button>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
