--- a/index.html
+++ b/index.html
@@ -425,6 +425,37 @@
           </div>
         </div>
       </section>
+
+      <section class="testimonial">
+        <div class="testimonial-txt">
+          <p class="txt-green">testimonials</p>
+          <div class="quote">
+            <svg
+              width="40"
+              height="40"
+              viewBox="0 0 40 40"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M23.3333 21.6667H30C30.442 21.6667 30.866 21.8423 31.1785 22.1548C31.4911 22.4674 31.6667 22.8913 31.6667 23.3333V28.3333C31.6667 28.7754 31.4911 29.1993 31.1785 29.5118C30.866 29.8244 30.442 30 30 30H25C24.558 30 24.134 29.8244 23.8215 29.5118C23.5089 29.1993 23.3333 28.7754 23.3333 28.3333V18.3333C23.3333 13.8883 25.555 11.1117 30 10M8.33333 21.6667L15 21.6667C15.442 21.6667 15.8659 21.8423 16.1785 22.1548C16.4911 22.4674 16.6667 22.8913 16.6667 23.3333V28.3333C16.6667 28.7754 16.4911 29.1993 16.1785 29.5118C15.8659 29.8244 15.442 30 15 30H10C9.55797 30 9.13405 29.8244 8.82149 29.5118C8.50893 29.1993 8.33333 28.7754 8.33333 28.3333V18.3333C8.33333 13.8883 10.555 11.1117 15 10"
+                stroke="#D5A24F"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+          <p class="paragraphe">
+            Lorem ipsum dolor sit amet consectetur. Augue nunc ornare et
+            suspendisse malesuada quam bibendum. Egestas sagittis nisi purus
+            aenean eu nec bibendum platea. Aliquet quisque egestas tristique
+            praesent.Lorem ipsum dolor sit amet consectetur. Augue nunc ornare
+            et suspendisse malesuada quam bibendum.
+          </p>
+          <p class="name color-txt">John Doe</p>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
