--- a/index.html
+++ b/index.html
@@ -456,6 +456,42 @@
           <p class="name color-txt">John Doe</p>
         </div>
       </section>
+
+      <section class="gallery">
+        <p class="txt-green">gallery</p>
+        <div class="photo">
+          <figure class="photo-1">
+            <img src="./assets/imagepng/gallery.png" alt="" />
+          </figure>
+          <figure class="photo-2">
+            <div class="photo-flex">
+              <img src="./assets/imagepng/photo-1.png" alt="" />
+              <img src="./assets/imagepng/photo-4.png" alt="" />
+            </div>
+            <div class="photo-grid">
+              <img src="./assets/imagepng/palmer.png" alt="" />
+            </div>
+          </figure>
+
+          <figure class="photo-3">
+            <img src="./assets/imagepng/vip.png" alt="" />
+          </figure>
+        </div>
+
+        <div class="photo-lab">
+          <figure class="photo-4">
+            <img src="./assets/imagepng/bureau.png" alt="" />
+          </figure>
+
+          <figure class="photo-5">
+            <img src="./assets/imagepng/recette.png" alt="" />
+          </figure>
+
+          <figure class="photo-6">
+            <img src="./assets/imagepng/chambre.png" alt="" />
+          </figure>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
