--- a/index.html
+++ b/index.html
@@ -492,6 +492,12 @@
           </figure>
         </div>
       </section>
+
+      <section class="map">
+        <figure>
+          <img src="./assets/imagepng/map.png" alt="" />
+        </figure>
+      </section>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
