--- a/index.html
+++ b/index.html
@@ -498,6 +498,93 @@
           <img src="./assets/imagepng/map.png" alt="" />
         </figure>
       </section>
+
+      <footer class="bg-black">
+        <div class="statu">
+          <figure>
+            <img src="./assets/imageSvg/logoFooter.png" alt="" />
+          </figure>
+          <p class="paragraphe">
+            Lorem ipsum dolor sit amet consectetur. Augue nunc ornare et
+            suspendisse malesuada quam bibend
+          </p>
+        </div>
+
+        <div class="reserv-loc">
+          <div class="reservation">
+            <p class="color-txt title-contact">Reservation</p>
+            <p class="contact">+261 33 44 555 99</p>
+            <p class="contact">mediteraneanhotel@gmail.com</p>
+          </div>
+
+          <div class="location title-contact">
+            <p class="color-txt">Our Location</p>
+            <p class="contact">+261 33 44 555 99</p>
+            <p class="contact">mediteraneanhotel@gmail.com</p>
+          </div>
+        </div>
+
+        <div class="email">
+          <p class="color-txt title-contact">Join our Newsletter & event</p>
+          <form>
+            <input type="email" placeholder="your e-mail address" />
+            <div class="btn-green">
+              <button>Send</button>
+            </div>
+          </form>
+
+          <div class="sociaux">
+            <p class="color-txt title-contact">Follow us :</p>
+            <svg
+              width="24"
+              height="25"
+              viewBox="0 0 24 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M16.5 8V8.01M4 8.5C4 7.43913 4.42143 6.42172 5.17157 5.67157C5.92172 4.92143 6.93913 4.5 8 4.5H16C17.0609 4.5 18.0783 4.92143 18.8284 5.67157C19.5786 6.42172 20 7.43913 20 8.5V16.5C20 17.5609 19.5786 18.5783 18.8284 19.3284C18.0783 20.0786 17.0609 20.5 16 20.5H8C6.93913 20.5 5.92172 20.0786 5.17157 19.3284C4.42143 18.5783 4 17.5609 4 16.5V8.5ZM9 12.5C9 13.2956 9.31607 14.0587 9.87868 14.6213C10.4413 15.1839 11.2044 15.5 12 15.5C12.7956 15.5 13.5587 15.1839 14.1213 14.6213C14.6839 14.0587 15 13.2956 15 12.5C15 11.7044 14.6839 10.9413 14.1213 10.3787C13.5587 9.81607 12.7956 9.5 12 9.5C11.2044 9.5 10.4413 9.81607 9.87868 10.3787C9.31607 10.9413 9 11.7044 9 12.5Z"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+
+            <svg
+              width="24"
+              height="25"
+              viewBox="0 0 24 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M7 10.5V14.5H10V21.5H14V14.5H17L18 10.5H14V8.5C14 8.23478 14.1054 7.98043 14.2929 7.79289C14.4804 7.60536 14.7348 7.5 15 7.5H18V3.5H15C13.6739 3.5 12.4021 4.02678 11.4645 4.96447C10.5268 5.90215 10 7.17392 10 8.5V10.5H7Z"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+
+            <svg
+              width="24"
+              height="25"
+              viewBox="0 0 24 25"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M22 4.51001C21 5.00001 20.02 5.19901 19 5.50001C17.879 4.23501 16.217 4.16501 14.62 4.76301C13.023 5.36101 11.977 6.82301 12 8.50001V9.50001C8.755 9.58301 5.865 8.10501 4 5.50001C4 5.50001 -0.182 12.933 8 16.5C6.128 17.747 4.261 18.588 2 18.5C5.308 20.303 8.913 20.923 12.034 20.017C15.614 18.977 18.556 16.294 19.685 12.275C20.0218 11.0527 20.189 9.78987 20.182 8.52201C20.182 8.27301 21.692 5.75001 22 4.50901V4.51001Z"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+          </div>
+        </div>
+      </footer>
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
