--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plaster&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&family=Yrsa:ital,wght@0,300..700;1,300..700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/@splidejs/splide/dist/css/splide.min.css"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel</title>
@@ -174,132 +178,142 @@
         </div>
       </section>
 
-      <section class="pub">
-        <div class="wraper-pub">
-          <div class="card-pub">
-            <figure>
-              <img src="./assets/imagepng/Bathroom.png" alt="" />
-            </figure>
-            <div class="title-pub">
-              <p class="color-txt">
-                Luxure<br />
-                Bathroom
-              </p>
-              <div class="btn-pub">
-                <button>
-                  Learn More<svg
-                    width="24"
-                    height="25"
-                    viewBox="0 0 24 25"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
-                      stroke="white"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </button>
+      <section class="pub splide">
+        <div class="wraper-pub splide__track">
+          <ul class="splide__list">
+            <li class="splide__slide">
+              <div class="card-pub">
+                <figure>
+                  <img src="./assets/imagepng/Bathroom.png" alt="" />
+                </figure>
+                <div class="title-pub">
+                  <p class="color-txt">
+                    Luxure<br />
+                    Bathroom
+                  </p>
+                  <div class="btn-pub">
+                    <button>
+                      Learn More<svg
+                        width="24"
+                        height="25"
+                        viewBox="0 0 24 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
+                          stroke="white"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                      </svg>
+                    </button>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
+            </li>
 
-          <div class="card-pub">
-            <figure>
-              <img src="./assets/imagepng/Bathroom2.png" alt="" />
-            </figure>
-            <div class="title-pub">
-              <p class="color-txt">
-                Luxure<br />
-                Bathroom
-              </p>
-              <div class="btn-pub">
-                <button>
-                  Learn More<svg
-                    width="24"
-                    height="25"
-                    viewBox="0 0 24 25"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
-                      stroke="white"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </button>
+            <li class="splide__slide">
+              <div class="card-pub">
+                <figure>
+                  <img src="./assets/imagepng/Bathroom2.png" alt="" />
+                </figure>
+                <div class="title-pub">
+                  <p class="color-txt">
+                    Luxure<br />
+                    Bathroom
+                  </p>
+                  <div class="btn-pub">
+                    <button>
+                      Learn More<svg
+                        width="24"
+                        height="25"
+                        viewBox="0 0 24 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
+                          stroke="white"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                      </svg>
+                    </button>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
+            </li>
 
-          <div class="card-pub">
-            <figure>
-              <img src="./assets/imagepng/Bathroom3.png" alt="" />
-            </figure>
-            <div class="title-pub">
-              <p class="color-txt">
-                Luxure<br />
-                Bathroom
-              </p>
-              <div class="btn-pub">
-                <button>
-                  Learn More<svg
-                    width="24"
-                    height="25"
-                    viewBox="0 0 24 25"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
-                      stroke="white"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </button>
+            <li class="splide__slide">
+              <div class="card-pub">
+                <figure>
+                  <img src="./assets/imagepng/Bathroom3.png" alt="" />
+                </figure>
+                <div class="title-pub">
+                  <p class="color-txt">
+                    Luxure<br />
+                    Bathroom
+                  </p>
+                  <div class="btn-pub">
+                    <button>
+                      Learn More<svg
+                        width="24"
+                        height="25"
+                        viewBox="0 0 24 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
+                          stroke="white"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                      </svg>
+                    </button>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
+            </li>
 
-          <div class="card-pub">
-            <figure>
-              <img src="./assets/imagepng/Bathroom4.png" alt="" />
-            </figure>
-            <div class="title-pub">
-              <p class="color-txt">
-                Luxure<br />
-                Bathroom
-              </p>
-              <div class="btn-pub">
-                <button>
-                  <span>Learn More</span
-                  ><svg
-                    width="24"
-                    height="25"
-                    viewBox="0 0 24 25"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
-                      stroke="white"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </button>
+            <li class="splide__slide">
+              <div class="card-pub">
+                <figure>
+                  <img src="./assets/imagepng/Bathroom4.png" alt="" />
+                </figure>
+                <div class="title-pub">
+                  <p class="color-txt">
+                    Luxure<br />
+                    Bathroom
+                  </p>
+                  <div class="btn-pub">
+                    <button>
+                      <span>Learn More</span
+                      ><svg
+                        width="24"
+                        height="25"
+                        viewBox="0 0 24 25"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M2 12.5H19M19 12.5L14.1429 16.5M19 12.5L14.1429 8.5"
+                          stroke="white"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                      </svg>
+                    </button>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -587,5 +601,6 @@
       </footer>
     </main>
     <script type="module" src="/src/main.js"></script>
+    <script src="path-to-the-file/splide.min.js"></script>
   </body>
 </html>
